force-app/main/default/objects/Shift_Checklist__c/Shift_Checklist__c.object-meta.xml
<CustomObject>
    <label>Shift Checklist</label>
    <pluralLabel>Shift Checklists</pluralLabel>
    <nameField>
        <type>AutoNumber</type>
        <label>Checklist Number</label>
        <displayFormat>SC-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>