force-app/main/default/objects/Shift_Checklist__c/fields/Completed_By__c.field-meta.xml
<CustomField>
    <fullName>Completed_By__c</fullName>
    <label>Completed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Shift_Checklists</relationshipName>
    <type>Lookup</type>
</CustomField>