force-app/main/default/objects/Shift_Checklist__c/fields/Shift_Date__c.field-meta.xml
<CustomField>
    <fullName>Shift_Date__c</fullName>
    <label>Shift Date</label>
    <required>true</required>
    <type>Date</type>
    <defaultValue>TODAY()</defaultValue>
</CustomField>