force-app/main/default/objects/Shift_Checklist__c/fields/Shift_Type__c.field-meta.xml
<CustomField>
    <fullName>Shift_Type__c</fullName>
    <label>Shift Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Morning</fullName>
            </value>
            <value>
                <fullName>Midday</fullName>
            </value>
            <value>
                <fullName>Evening</fullName>
            </value>
            <value>
                <fullName>Night</fullName>
            </value>
            <value>
                <fullName>Weekend</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>